--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "dayjs": "^1.11.10",
+    "puppeteer": "^21.3.8",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.22.4",
+    "zod-validation-error": "^1.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -28,6 +33,7 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8.51.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
