--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "@swc/core": "^1.3.93",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "@types/supertest": "^2.0.14",
     "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.51.0",
     "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3",
