--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "zod-validation-error": "^1.5.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.1.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
