--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -11,6 +11,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: pnpm/action-setup@v2
+        with:
+          version: 8.9.0
 
       - uses: actions/setup-node@v3
         with:
