Fixed pnpm install command in workflow yml

--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 18
           cache: 'pnpm'
 
-      - run: pnpm ci
+      - run: pnpm install --frozen-lockfile
 
       - run: pnpm run test:e2e
         env:
