--- a/.github/workflows/run-unit-tests.yml
+++ b/.github/workflows/run-unit-tests.yml
@@ -19,6 +19,6 @@ jobs:
           node-version: 18
           cache: 'pnpm'
 
-      - run: pnpm ci
+      - run: pnpm install --frozen-lockfile
 
       - run: pnpm run test
