--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "vitest run --coverage",
     "test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
     "test:e2e": "vitest run --config ./vitest.config.e2e.ts",
-    "test:e2e:watch": "vitest --config ./vitest.config.e2e.ts"
+    "test:e2e:watch": "vitest --config ./vitest.config.e2e.ts",
+    "postinstall": "node node_modules/puppeteer/install.mjs"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
